--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@ body
     
     Linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
 }
-div.container {
-    width:200;
+a {
+    width:300;
     border:1em solid yellowgreen;
-  }
   
-  div.split {
-      background-color: aqua
+  
+ 
+      background-color: rgb(255, 255, 255);
     box-sizing:border-box;
-    width:50%;
+    width:10%;
     border:1em silver ridge;
     float:left;
   }
